--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "better-scroll": "^0.1.15",
+    "ejs": "^2.5.6",
     "vue": "^2.2.2",
     "vue-resource": "^1.3.1",
     "vue-router": "^2.4.0"
